<resources>
    <string name="app_name">Nu3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Nav Items -->

    <string name="nav_news_title">News</string>
    <string name="nav_history_title">History</string>
    <string name="nav_our_team_title">Our team</string>
    <string name="nav_vision_title">Mision and vision</string>
    <string name="nav_donate_title">Donate</string>

    <!-- Team Names -->

    <string name="president">President Board of Directors</string>
    <string name="vice_president">Vice-President Board of Directors</string>
    <string name="executive_director">Executive Director</string>
    <string name="operations_supervisor">Operations Supervisor</string>
    <string name="accounting_supervisor">Accounting and Administrative Supervisor</string>
    <string name="operations_subdirector">Operations Subdirector</string>
    <string name="commercial_supervisor">Commercial Supervisor</string>

    <string name="mision_title">
        Mision
    </string>

    <string name="vision_title">
        Vision
    </string>

    <string name="value_title">
        Values
    </string>

    <string name="history_title">
        History
    </string>

    <string name="mision">
        Carry out food and nutritional security programs for the most vulnerable population. Additionally, implement education, health and entrepreneurship strategies that promote the comprehensive development of the families.
    </string>

    <string name="vision">
        In 2025 we will be recognized in the national and international level for our excellent comprehensive work against malnutrition of Colombian children, promoting opportunities and the social inclusion of the communities served.
    </string>

    <string name="donate_hint">
        Enter amount (USD)
    </string>

    <string name="donate_paypal">
        Donate with Paypal
    </string>

    <string name="donate_pse">
        Donate with PSE
    </string>

    <string name="donate_result_ok">
        Donation was successful
    </string>

    <string name="donate_result_cancelled">
        Donation was cancelled
    </string>

    <string name="donate_result_invalid">
        Invalid payment
    </string>

    <string name="donate_result_error">
        An error occurred with the donation
    </string>

    <string name="donation_motto">With you I build a decent life</string>

    <string name="values">
        Transparency and Efficiency
        Responsibility
        Solidarity
        Reliability
        Human Quality
    </string>

    <string name="history">
        nu3 Foundation was constituted on December 5, 2005 in the city of Barranquilla, Colombia. The Foundation arises in response to the need experienced by a large percentage of infant population in Barranquilla and the Atlantico Department, to have access to food with the adequate nutritional and energetic content necessary for their normal growth and development.\n\n
        In this manner, more than providing food and applying an educational model, nu3 Foundation works for the happiness of our beneficiaries, their present and the construction of a better future surrounded by equality, fairness, satisfied basic needs and a quality of life with opportunities for progress.\n\n
        Nu3 Foundation comprehensively provides services to more than 19,000 children every year. We serve children (boys and girls), pregnant and breastfeeding mothers, seniors, youngsters and their families, providing Food and Nutritional Security Programs, supplemented with strategies in Health, Education and Income Generation. Initially we served 35 children in the Santamaria Neighborhood Cafeteria in the city of Barranquilla, when we established Foundation’s first cafeteria. Now our interventions cover the Departments of Atlántico, Bolívar, Magdalena, Chocó, Córdoba and Guajira.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
